--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-vertical-timeline-component": "^3.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
